--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
   font-family: Avenir, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 { font-weight: 600 }
+h1, h2, h3, h4, h5, h6 { font-weight: 600; color: #323232; }
 
 h1 { font-size: 2.50rem }
 h2 { font-size: 2.00rem }
