--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,16 +6,39 @@
   font-family: Avenir, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 { font-weight: 600; color: #323232; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+  color: #323232;
+}
 
-h1 { font-size: 2.50rem }
-h2 { font-size: 2.00rem }
-h3 { font-size: 1.75rem }
-h4 { font-size: 1.50rem }
-h5 { font-size: 1.25rem }
-h6 { font-size: 1.00rem }
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+h5 {
+  font-size: 1.25rem;
+}
+h6 {
+  font-size: 1rem;
+}
 
-p { color: grey; line-height: 1.5; }
+p {
+  color: grey;
+  line-height: 1.5;
+}
 
 // a {
 //   cursor: pointer;
@@ -34,22 +57,21 @@ p { color: grey; line-height: 1.5; }
 //   }
 // }
 
-input, textarea, select {
+input,
+textarea,
+select {
   // font-weight: 500;
   color: #212529 !important;
 }
-
 
 input[type="checkbox" i] {
   margin: 0 !important;
 }
 
-
 // ::-webkit-scrollbar {
 //     width: 0px;  /* Remove scrollbar space */
 //     background: transparent;  /* Optional: just make scrollbar invisible */
 // }
-
 
 // ====== SWITCH ====== //
 input[type="checkbox"] {
@@ -58,20 +80,25 @@ input[type="checkbox"] {
 }
 
 .toggle-switch-input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
 }
 
-button, input {
-    overflow: visible;
+button,
+input {
+  overflow: visible;
 }
 
-input, button, select, optgroup, textarea {
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 // input[type="checkbox" i] {
@@ -85,54 +112,54 @@ input, button, select, optgroup, textarea {
 // }
 
 .toggle-switch {
-    font-size: 15px;
-    display: -ms-flexbox;
-    display: flex;
-    cursor: pointer;
-    margin-bottom: 0;
+  font-size: 15px;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  margin-bottom: 0;
 }
 
 .toggle-switch-input:checked + .toggle-switch-label {
-    background-color: #377dff;
+  background-color: #377dff;
 }
 
 .toggle-switch-label {
-    position: relative;
-    display: block;
-    width: 3em;
-    height: 2em;
-    background-color: #e7eaf3;
-    background-clip: content-box;
-    border: 0.125em solid transparent;
-    border-radius: 6.1875em;
-    transition: 0.3s;
+  position: relative;
+  display: block;
+  width: 3em;
+  height: 2em;
+  background-color: #e7eaf3;
+  background-clip: content-box;
+  border: 0.125em solid transparent;
+  border-radius: 6.1875em;
+  transition: 0.3s;
 }
 
 .toggle-switch-input:checked + .toggle-switch-label .toggle-switch-indicator {
-    -webkit-transform: translate3d(1.05em, 50%, 0);
-    transform: translate3d(1.05em, 50%, 0);
+  -webkit-transform: translate3d(1.05em, 50%, 0);
+  transform: translate3d(1.05em, 50%, 0);
 }
 
 .toggle-switch-indicator {
-    position: absolute;
-    left: 0.125em;
-    bottom: 50%;
-    width: 1.4em;
-    height: 1.4em;
-    background-color: #fff;
-    -webkit-transform: initial;
-    transform: initial;
-    // box-shadow: 0px 3px 6px 0px rgba(140, 152, 164, 0.25);
-    border-radius: 50%;
-    -webkit-transform: translate3d(0, 50%, 0);
-    transform: translate3d(0, 50%, 0);
-    transition: 0.3s;
+  position: absolute;
+  left: 0.125em;
+  bottom: 50%;
+  width: 1.4em;
+  height: 1.4em;
+  background-color: #fff;
+  -webkit-transform: initial;
+  transform: initial;
+  // box-shadow: 0px 3px 6px 0px rgba(140, 152, 164, 0.25);
+  border-radius: 50%;
+  -webkit-transform: translate3d(0, 50%, 0);
+  transform: translate3d(0, 50%, 0);
+  transition: 0.3s;
 }
 
 .toggle-switch-content {
-    -ms-flex: 1;
-    flex: 1;
-    margin-left: 0.5em;
+  -ms-flex: 1;
+  flex: 1;
+  margin-left: 0.5em;
 }
 
 .toggle {
@@ -152,7 +179,6 @@ input, button, select, optgroup, textarea {
     font-size: 14px;
   }
 }
-
 
 // ====== DATEPICKER ====== //
 .react-datepicker-wrapper {
