Setup and tried using Chakra UI

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,249 +1,249 @@
-* {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  box-sizing: border-box;
-  font-family: Avenir, Helvetica, sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 600;
-  color: #323232;
-}
-
-h1 {
-  font-size: 2.5rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.75rem;
-}
-h4 {
-  font-size: 1.5rem;
-}
-h5 {
-  font-size: 1.25rem;
-}
-h6 {
-  font-size: 1rem;
-}
-
-p {
-  color: grey;
-  line-height: 1.5;
-}
-
-// a {
-//   cursor: pointer;
-//
-//   color: #8A9BA8;
-//   border-bottom: 1px dashed #8A9BA8;
-//
-//   &:hover {
-//     color: #377dff;
-//     border-bottom: 1px dashed #377dff;
-//   }
-//
-//   &:active {
-//     color: #045cff;
-//     border-bottom: 1px dashed #045cff;
-//   }
+// * {
+//   margin: 0;
+//   padding: 0;
+//   outline: none;
+//   box-sizing: border-box;
+//   font-family: Avenir, Helvetica, sans-serif;
 // }
 
-input,
-textarea,
-select {
-  // font-weight: 500;
-  color: #212529 !important;
-}
-
-input[type="checkbox" i] {
-  margin: 0 !important;
-}
-
-// ::-webkit-scrollbar {
-//     width: 0px;  /* Remove scrollbar space */
-//     background: transparent;  /* Optional: just make scrollbar invisible */
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//   font-weight: 600;
+//   color: #323232;
 // }
 
-// ====== SWITCH ====== //
-input[type="checkbox"] {
-  box-sizing: border-box;
-  padding: 0;
-}
+// h1 {
+//   font-size: 2.5rem;
+// }
+// h2 {
+//   font-size: 2rem;
+// }
+// h3 {
+//   font-size: 1.75rem;
+// }
+// h4 {
+//   font-size: 1.5rem;
+// }
+// h5 {
+//   font-size: 1.25rem;
+// }
+// h6 {
+//   font-size: 1rem;
+// }
 
-.toggle-switch-input {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-}
+// p {
+//   color: grey;
+//   line-height: 1.5;
+// }
 
-button,
-input {
-  overflow: visible;
-}
+// // a {
+// //   cursor: pointer;
+// //
+// //   color: #8A9BA8;
+// //   border-bottom: 1px dashed #8A9BA8;
+// //
+// //   &:hover {
+// //     color: #377dff;
+// //     border-bottom: 1px dashed #377dff;
+// //   }
+// //
+// //   &:active {
+// //     color: #045cff;
+// //     border-bottom: 1px dashed #045cff;
+// //   }
+// // }
 
-input,
-button,
-select,
-optgroup,
-textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
+// input,
+// textarea,
+// select {
+//   // font-weight: 500;
+//   color: #212529 !important;
+// }
 
 // input[type="checkbox" i] {
-//     background-color: initial;
-//     cursor: default;
-//     appearance: checkbox;
-//     box-sizing: border-box;
-//     margin: 3px 3px 3px 4px;
-//     padding: initial;
-//     border: initial;
+//   margin: 0 !important;
 // }
 
-.toggle-switch {
-  font-size: 15px;
-  display: -ms-flexbox;
-  display: flex;
-  cursor: pointer;
-  margin-bottom: 0;
-}
+// // ::-webkit-scrollbar {
+// //     width: 0px;  /* Remove scrollbar space */
+// //     background: transparent;  /* Optional: just make scrollbar invisible */
+// // }
 
-.toggle-switch-input:checked + .toggle-switch-label {
-  background-color: #377dff;
-}
+// // ====== SWITCH ====== //
+// input[type="checkbox"] {
+//   box-sizing: border-box;
+//   padding: 0;
+// }
 
-.toggle-switch-label {
-  position: relative;
-  display: block;
-  width: 3em;
-  height: 2em;
-  background-color: #e7eaf3;
-  background-clip: content-box;
-  border: 0.125em solid transparent;
-  border-radius: 6.1875em;
-  transition: 0.3s;
-}
+// .toggle-switch-input {
+//   position: absolute;
+//   z-index: -1;
+//   opacity: 0;
+// }
 
-.toggle-switch-input:checked + .toggle-switch-label .toggle-switch-indicator {
-  -webkit-transform: translate3d(1.05em, 50%, 0);
-  transform: translate3d(1.05em, 50%, 0);
-}
+// button,
+// input {
+//   overflow: visible;
+// }
 
-.toggle-switch-indicator {
-  position: absolute;
-  left: 0.125em;
-  bottom: 50%;
-  width: 1.4em;
-  height: 1.4em;
-  background-color: #fff;
-  -webkit-transform: initial;
-  transform: initial;
-  // box-shadow: 0px 3px 6px 0px rgba(140, 152, 164, 0.25);
-  border-radius: 50%;
-  -webkit-transform: translate3d(0, 50%, 0);
-  transform: translate3d(0, 50%, 0);
-  transition: 0.3s;
-}
+// input,
+// button,
+// select,
+// optgroup,
+// textarea {
+//   margin: 0;
+//   font-family: inherit;
+//   font-size: inherit;
+//   line-height: inherit;
+// }
 
-.toggle-switch-content {
-  -ms-flex: 1;
-  flex: 1;
-  margin-left: 0.5em;
-}
+// // input[type="checkbox" i] {
+// //     background-color: initial;
+// //     cursor: default;
+// //     appearance: checkbox;
+// //     box-sizing: border-box;
+// //     margin: 3px 3px 3px 4px;
+// //     padding: initial;
+// //     border: initial;
+// // }
 
-.toggle {
-  display: flex;
-  margin: 0.75rem 0;
+// .toggle-switch {
+//   font-size: 15px;
+//   display: -ms-flexbox;
+//   display: flex;
+//   cursor: pointer;
+//   margin-bottom: 0;
+// }
 
-  .toggle-switch {
-    margin-right: 0.6rem;
-  }
+// .toggle-switch-input:checked + .toggle-switch-label {
+//   background-color: #377dff;
+// }
 
-  .toggle-title {
-    font-weight: 600;
-    font-size: 16px;
-  }
+// .toggle-switch-label {
+//   position: relative;
+//   display: block;
+//   width: 3em;
+//   height: 2em;
+//   background-color: #e7eaf3;
+//   background-clip: content-box;
+//   border: 0.125em solid transparent;
+//   border-radius: 6.1875em;
+//   transition: 0.3s;
+// }
 
-  .toggle-description {
-    font-size: 14px;
-  }
-}
+// .toggle-switch-input:checked + .toggle-switch-label .toggle-switch-indicator {
+//   -webkit-transform: translate3d(1.05em, 50%, 0);
+//   transform: translate3d(1.05em, 50%, 0);
+// }
 
-// ====== DATEPICKER ====== //
-.react-datepicker-wrapper {
-  width: 100%;
+// .toggle-switch-indicator {
+//   position: absolute;
+//   left: 0.125em;
+//   bottom: 50%;
+//   width: 1.4em;
+//   height: 1.4em;
+//   background-color: #fff;
+//   -webkit-transform: initial;
+//   transform: initial;
+//   // box-shadow: 0px 3px 6px 0px rgba(140, 152, 164, 0.25);
+//   border-radius: 50%;
+//   -webkit-transform: translate3d(0, 50%, 0);
+//   transform: translate3d(0, 50%, 0);
+//   transition: 0.3s;
+// }
 
-  .react-datepicker__input-container {
-    height: 100%;
-    width: 100%;
+// .toggle-switch-content {
+//   -ms-flex: 1;
+//   flex: 1;
+//   margin-left: 0.5em;
+// }
 
-    input {
-      width: 100%;
-      font-size: 1rem;
-      color: black !important;
-      padding: 0.75rem;
-      border-radius: 0.25rem;
-      border: 1px solid #d5dae2;
-    }
-  }
-}
+// .toggle {
+//   display: flex;
+//   margin: 0.75rem 0;
 
-.react-datepicker-popper {
-  z-index: 5 !important;
-}
+//   .toggle-switch {
+//     margin-right: 0.6rem;
+//   }
 
-.react-datepicker__current-month,
-.react-datepicker__current-month--hasYearDropdown,
-.react-datepicker__current-month--hasMonthDropdown {
-  display: none;
-}
+//   .toggle-title {
+//     font-weight: 600;
+//     font-size: 16px;
+//   }
 
-.react-datepicker__month-select,
-.react-datepicker__year-select {
-  background: transparent;
-  border: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
+//   .toggle-description {
+//     font-size: 14px;
+//   }
+// }
 
-.react-datepicker__day--today,
-.react-datepicker__month-text--today,
-.react-datepicker__quarter-text--today,
-.react-datepicker__year-text--today {
-  font-weight: 500;
-  color: #777;
-  background-color: rgba(138, 155, 169, 0.2);
-  border-radius: 0.25rem;
-}
+// // ====== DATEPICKER ====== //
+// .react-datepicker-wrapper {
+//   width: 100%;
 
-.react-datepicker__day--selected {
-  font-weight: 600;
-  color: white;
-  background-color: #377dff;
-  border-radius: 0.25rem;
-}
+//   .react-datepicker__input-container {
+//     height: 100%;
+//     width: 100%;
 
-.react-datepicker__day--keyboard-selected,
-.react-datepicker__month-text--keyboard-selected,
-.react-datepicker__quarter-text--keyboard-selected,
-.react-datepicker__year-text--keyboard-selected {
-  font-weight: initial;
-  color: initial;
-  background-color: initial;
-  border-radius: initial;
-}
+//     input {
+//       width: 100%;
+//       font-size: 1rem;
+//       color: black !important;
+//       padding: 0.75rem;
+//       border-radius: 0.25rem;
+//       border: 1px solid #d5dae2;
+//     }
+//   }
+// }
 
-.react-datepicker__day--outside-month {
-  color: #bbb;
-}
+// .react-datepicker-popper {
+//   z-index: 5 !important;
+// }
+
+// .react-datepicker__current-month,
+// .react-datepicker__current-month--hasYearDropdown,
+// .react-datepicker__current-month--hasMonthDropdown {
+//   display: none;
+// }
+
+// .react-datepicker__month-select,
+// .react-datepicker__year-select {
+//   background: transparent;
+//   border: none;
+//   -webkit-appearance: none;
+//   -moz-appearance: none;
+// }
+
+// .react-datepicker__day--today,
+// .react-datepicker__month-text--today,
+// .react-datepicker__quarter-text--today,
+// .react-datepicker__year-text--today {
+//   font-weight: 500;
+//   color: #777;
+//   background-color: rgba(138, 155, 169, 0.2);
+//   border-radius: 0.25rem;
+// }
+
+// .react-datepicker__day--selected {
+//   font-weight: 600;
+//   color: white;
+//   background-color: #377dff;
+//   border-radius: 0.25rem;
+// }
+
+// .react-datepicker__day--keyboard-selected,
+// .react-datepicker__month-text--keyboard-selected,
+// .react-datepicker__quarter-text--keyboard-selected,
+// .react-datepicker__year-text--keyboard-selected {
+//   font-weight: initial;
+//   color: initial;
+//   background-color: initial;
+//   border-radius: initial;
+// }
+
+// .react-datepicker__day--outside-month {
+//   color: #bbb;
+// }
